# restic-to-influxdb

./: COPYRIGHT.md  Cargo.toml  README.md  sample-lines.txt
.github/workflows/: rust.yml
src/: main.rs
