[package]
name = "restic-to-influxdb"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
influxdb = { version = "0.7.2", features = ["derive"] }
serde = { version = "1.0.209", feature = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"]}
unidecode = "0.3.0"
